style.css
/* ... */
		
.menu-link:active {
	background-color:#FA8072; 
	transition:background-size 0;
}

.page-title {
	font-size: 2.1rem;
	padding-top: 3rem;
  font-weight: 400;
}

.line {
	margin: 0 15% 0 15%;
	height: 4px;
	background: linear-gradient(to right,#FA8072, #F7CCAD);
	border: 0;
  border-radius: 50%;
}

.page-text {
	text-align: left;
	font-size: 1.2rem;
	margin: 0 15%;
  padding: 2rem 0 9rem 0;
  line-height: 1.5;
}

.second-page .page-text {
  font-weight: 300;
}

.icons .page-text {
  text-align: center;
  margin: 10% 15% 0 15%;
}

.skills-list {
  margin-left: -40px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.skills-list li {
  margin: 10px;
  display: flex;
  align-items: center;
}

.skills-list li::before {
  display: block;
  content: "";
  background-repeat: no-repeat;
  background-size: 20px 20px;
  height: 20px;
  width: 20px;
  margin-right: 5px;
}

.skill-html::before {
  background-image: url('images/icons8-html-5.svg');
}

.skill-css::before {
  background-image: url('images/icons8-css3.svg');
}

.skill-js::before {
  background-image: url('images/icons8-javascript-logo.svg');
}

.skill-jquery::before {
  background-image: url('images/icons8-jquery.svg');
}

.skill-react::before {
  background-image: url('images/icons8-react.svg');
}

.skill-mage::before {
  background-image: url('images/icons8-magento.svg');
}

.skill-wp::before {
  background-image: url('images/icons8-wordpress.svg');
}

.skill-shop::before {
  background-image: url('images/icons8-shopify.svg');
}

.skill-xd::before {
  background-image: url('images/icons8-adobe-xd.svg');
}

.skill-ps::before {
  background-image: url('images/icons8-adobe-photoshop.svg');
}

.projects {
	/*display: grid;
	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  grid-gap: 7%;
  align-items: stretch;*/
  margin: 0 15%;
  padding-top: 2rem;
}

.project-description {
  text-align: left;
}

.project-description p {
  font-weight: 300;
}

.project-text h3 {
  text-align: left;
}

.card {
  display: none;
}

.show {
  text-align: center;
  transition: 0.3s;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 5rem;
}

.project-text {
 padding: 2rem;
}

.project-text a {
  text-decoration: underline;

}

.project-title:hover {
  color: #FA8072;
  cursor: pointer;
}

.filter-buttons {
  margin-top: 2rem;
}

.show-all-button {
  /*height: 70px;*/
}

.show-all {
  display: block;
  margin: 0 auto;
  width: fit-content;
  border: 2px solid transparent:
}

.show-all:hover {
  cursor: pointer;
}

.contact-info {
	display: flex;
	flex-direction: row;
	justify-content: center;
  margin-top: 40px;
  margin-left: -30px;
}

.contact-info h3 {
  font-weight: 300;
}

.icon {
	width: 80px;
	height: 80px;
  display: block;
  margin: 0 auto;
}

.icons:hover {
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
}

.icons {
  padding: 50px;
  margin: 10px;
}

.info-contact {
  text-align: center;
  font-size: 2.5vh;
  font-weight: 600;
}

.info-contact:hover {
  color:#FA8072;
}

.hamburger {
  border: none;
  background-image: url('images/icons8-menu.svg');
  background-size: cover;
  width: 35px;
  height: 35px;
  background-color: white;
  cursor: pointer;
  float: right;
  right: 10px;
  top: 10px;
  z-index: 20;
  position: fixed;
  display: none;
}

.button-container {
  position: relative;
}

.play-button {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 1;
  background: url(images/icons8-circled-play-80.png); /* credit to smashicons on flaticon*/
  border: none;
  width: 40px;
  height: 40px;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
  cursor: pointer;
}

.skills {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  background: #ffbfa8;
  padding: 4rem 0;
}

.skill-one, .skill-two {
  text-align: center;
  padding: 30px;
  margin: 10px 30px 0 30px;
  flex: 50%;
}

.skill-icon {
  width: 40px;
  height: 40px;
  margin: 0 auto;
}

.calltoaction {
  font-family: 'Open Sans', sans-serif;
  text-decoration: none;
  padding: 10px;
  margin: 10px;
  background-size: 0% 100%;
  border: 1px solid black;
  transition: background-color .5s;
  font-size: 1.3rem;
}

.calltoaction:hover {
  background-color:#FA8072;
  border: 2px solid #FA8072;
  background-image:linear-gradient(to right, #FA8072 0%, #F7CCAD 100%);
  background-repeat:no-repeat;
  background-size: 200% 100%; 
  transition:background-size 1s, background-color 1s;
}

.socials-div {
  background-color: #ffbfa8;
  text-align: center;
  padding-top: 80px;
  padding-bottom: 60px;
}

.socials {
  border-right: 1px solid black;
}

.social-icon {
  width: 20px;
  height: 20px;
  margin: auto;
  vertical-align: middle;
  padding-right: 15px;
}

.social-link {
  padding: 15px;
}

.footer {
  margin: 20px;
}

.text.footer {
  font-weight: 300;
}

/* responsiveness */

/* wide screens */
@media only screen and (min-width: 1400px) {
  .icon {
    width: 150px;
    height: 150px;
  }

  .icons {
    padding: 7%;
  }

  .page-title {
    padding-top: 5rem;
  }

  .text {
    font-size: 1.3rem;
  }

  .sub-title {
    font-size: 1.8rem;
  }

  .show-all {
    padding: 15px;
    font-size: 2em;
  }

  .project-text {
    padding: 2rem 2rem 2rem 6rem;
  }

  .skills {
    padding-left: 15%;
    padding-right: 15%;
  }

  .skill-icon {
    width: 50px;
    height: 50px;
  }

  .menu-link {
    font-size: 1.5rem;
  }

  .show {
    justify-content: center;
  }
  .project-text {
    max-width: 50%;
  }

}
/* ... */

